--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
   <h4 class="header--subtitle">Excursion remembers places you like, and recommends new points of interest around you.</h4>
   <p><img src="resources/images/camp.jpg"></p>
   <p><img src="resources/images/phone.png"></p>
+  <h2 class="header--secondary">Coming Soon for iPhone and Android</h2>
 </body>
 </html>
